src/proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8082 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              upgrade_configs:
                - upgrade_type: websocket
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: echo_service
                          max_grpc_timeout: 0s
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,Authorization
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router

          tls_context:
            common_tls_context:
              alpn_protocols: "h2"
              tls_certificates:
                - certificate_chain:
                    inline_string: |
                      -----BEGIN CERTIFICATE-----
                      MIID3TCCAsWgAwIBAgIUUXqas7k2XL6qpR7dO6Lus8fHBsswDQYJKoZIhvcNAQEL
[...]
                      i2l8mGzD3A98PNsN6o8x/AtkFylf21W20Vn/rNdp5cAs
                      -----END CERTIFICATE-----

                  private_key:
                    inline_string: |
                      -----BEGIN RSA PRIVATE KEY-----
                      MIIEpQIBAAKCAQEA2+MgrlPCgi3/q2tI0b7/C1L8sHVfXwbQUZu1YBcI51tDXjCS
[...]
                      UH1ZCp6FR1VZ+lZvnrxXQXd4oVU8a1VyZkb3WNHO8Nz8BIW4kJsNFDQ=
                      -----END RSA PRIVATE KEY-----

  clusters:
    - name: echo_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: host.docker.internal, port_value: 50051 }}]
